Don't erroneously try to follow attachment crypto settings when saving as draft.

BUG: 236729

svn path=/trunk/KDE/kdepim/messagecomposer/; revision=1125493